--- a/Merino_Final/css/font.css
+++ b/Merino_Final/css/font.css
@@ -11,6 +11,7 @@
 	url('../font/GT-Super-Display-Super.otf') format('truetype');
 }
 
+/*
 @font-face{
 	font-family: 'Roboto';
 	font-weight: normal;
@@ -21,3 +22,4 @@
 	url('../font/Roboto.woff') format('woff'),
 	url('../font/Roboto.otf') format('truetype');
 }
+*/
