Update confirm.css page

--- a/Merino_Website/css/confirm.css
+++ b/Merino_Website/css/confirm.css
@@ -1,16 +1,11 @@
 /*
-
     Made by:
     	
  	 \(▔＾▔)/        \(^——^)/
 
  	Amiko Tong  &  Nadia Yonata
- 		
-
-
-
  	For IAT 339 course group project. 
- 	Used ... resource or code from ...*/
+ */
 
 
 
